@@ -509,3 +509,4 @@ ERROR_REMOTE_REPOSITORY_CONFIG_BAD, 7008, "remote hotback repository configurati
 ERROR_LOCAL_LOCK_FAILED, 7009, "some db servers cannot be reached for transaction locks", "Some of the db servers cannot be reached for transaction locks."
 ERROR_LOCAL_LOCK_RETRY, 7010, "some db servers cannot be reached for transaction locks", "Some of the db servers cannot be reached for transaction locks."
 ERROR_HOT_BACKUP_CONFLICT, 7011, "hot backup conflict", "Conflict of multiple hot backup processes."
+ERROR_HOT_BACKUP_DBSERVERS_AWOL, 7012, "hot backup not all db servers reachable", "One or more db servers could not be reached for hot backup inquiry"
