@@ -354,4 +354,5 @@ void TRI_InitializeErrorMessages() {
   REG_ERROR(ERROR_LOCAL_LOCK_FAILED, " \"some db servers cannot be reached for transaction locks\"");
   REG_ERROR(ERROR_LOCAL_LOCK_RETRY, " \"some db servers cannot be reached for transaction locks\"");
   REG_ERROR(ERROR_HOT_BACKUP_CONFLICT, " \"hot backup conflict\"");
+  REG_ERROR(ERROR_HOT_BACKUP_DBSERVERS_AWOL, " \"hot backup not all db servers reachable\"");
 }
